<resources>
    <string name="app_name" translatable="false">Helper</string>
    <string name="str_loading">Loading...</string>

    <string name="str_empty_data">There are no data added yet.</string>
    <string name="str_attended">Present</string>
    <string name="str_absent">Absent</string>
    <string name="str_delete">Delete</string>

    <string name="str_home">Home</string>
    <string name="str_users">Users</string>
    <string name="str_courses">Courses</string>
    <string name="str_about">about</string>
    <string name="str_more">More</string>
    <string name="str_search_hint">Search</string>

    <string name="str_create_new_user">New User</string>
    <string name="str_create_new_course">New Course</string>
    <string name="str_create_new_lecture">New Lecture</string>
    <string name="str_take_attendance">Take Attendance</string>
    <string name="str_students_counter">Students %d</string>
    <string name="str_lectures_counter">Lectures %d</string>
    <string name="str_students">Students</string>
    <string name="str_lectures">Lectures</string>

    <string name="str_username_hint" translatable="false">user@domin.com</string>
    <string name="str_password_hint">Enter Password</string>
    <string name="str_default_password">Default Password is 123456</string>

    <string name="str_salary_type_hour">Hour</string>
    <string name="str_salary_type_day">Day</string>
    <string name="str_salary_type_month">Month</string>

    <string name="str_gender_type_male">Male</string>
    <string name="str_gender_type_female">Female</string>

    <string name="str_upload_successfully">Uploaded Successfully</string>

    <string name="str_save">Save</string>

    <string name="str_header_welcome">Welcome: %s</string>
    <string name="str_header_profile">My Profile</string>
    <string name="str_change_language"><u>Change Language To Arabic</u></string>
    <string name="str_header_settings">Settings</string>
    <string name="str_change_image_profile"><u>Change Image</u></string>
    <string name="str_invalid_username_or_password">Invalid username or password: </string>
    <string name="str_login_successful">Login Successful</string>

    <string name="str_login">Login</string>
    <string name="str_registration">Registration</string>

    <string name="str_grade">Grade</string>
    <string name="str_grade_hint">Select Grade</string>
    <string name="str_grade_alert">Invalid Grade</string>
    <string name="str_username" translatable="false">Username</string>
    <string name="str_username_invalid">Username Invalid</string>
    <string name="str_password">Password</string>
    <string name="str_password_length_invalid">Password Invalid Length, Password Must Be At Least 6 Digits</string>
    <string name="str_password_confirm_hint">Confirm Password</string>
    <string name="str_password_confirm_invalid">Confirm Password Invalid</string>
    <string name="str_full_name_hint">Full Name</string>
    <string name="str_full_name_invalid">Full Name Invalid</string>
    <string name="str_phone_hint">Phone</string>
    <string name="str_phone_invalid">Phone Invalid</string>
    <string name="str_address_hint">Address</string>
    <string name="str_address_invalid">Address Invalid</string>
    <string name="str_signup_fail">SignUp Fail: %s</string>

    <string name="str_message_added_successfully">Add or Update Completed Successfully</string>
    <string name="str_message_delete_successfully">Delete Completed Successfully</string>
    <string name="str_forget_password"><u>Forget Password?</u></string>

    <string name="str_logout">Logout</string>
    <string name="str_edit">Edit</string>

    <string name="str_about_content">Content:</string>
    <string name="str_about_conditions">The conditions:</string>
    <string name="str_about_objectives">Objectives:</string>
    <string name="str_user_type_admin">Admin</string>
    <string name="str_user_type_student">Student</string>
    <string name="str_user_type_teacher">Teacher</string>

    <string name="str_course_summary_title">View Summary</string>
    <string name="str_course_viewer_title">View Course</string>
    <string name="str_user_profile_title">User Profile</string>
    <string name="str_user_type_student_title">New / Edit Student</string>
    <string name="str_user_type_lecturer_title">New / Edit Teacher</string>
    <string name="str_degree_per_lecture_summary">%s For Lecture</string>

    <string name="str_lecture_name">Name</string>
    <string name="str_lecture_name_hint">Type Name</string>
    <string name="str_lecture_name_alert">Invalid Name</string>
    <string name="str_lecture_date">Date %s</string>

    <string name="str_course_name">Name</string>
    <string name="str_course_name_hint">Type Name</string>
    <string name="str_course_name_alert">Invalid Name</string>
    <string name="str_course_grade">Grade</string>
    <string name="str_course_grade_hint">Select Grade</string>
    <string name="str_course_grade_alert">Invalid Grade</string>
    <string name="str_course_lecturer">Teacher</string>
    <string name="str_course_lecturer_hint">Select Teacher</string>
    <string name="str_course_lecturer_alert">Invalid Teacher</string>
    <string name="str_course_students">Students</string>
    <string name="str_course_students_alert">Invalid Students</string>
    <string name="str_course_degree_per_lecture">Degree Per Lecture</string>
    <string name="str_course_degree_per_lecture_alert">Degree Per Lecture</string>
    <string-array name="grades">
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
    </string-array>

    <string name="str_students_header">Students</string>
    <string name="str_degrees_header">Degrees</string>
    <string name="str_total">Total</string>
</resources>
