<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/btn_save"
    android:layout_below="@+id/bar_layout">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lectures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:text="@string/str_lectures_counter"
            android:textColor="@color/black_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/str_empty_data"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/search_bar"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            tools:itemCount="5"
            tools:listitem="@layout/item_lecture" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_lecture"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                android:layout_weight="1"
                android:background="@drawable/btn_green_background"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/str_create_new_lecture"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/take_attendance"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/btn_primary_background"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/str_take_attendance"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/loading"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="@string/str_loading"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/summary"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_red_background"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/str_course_summary_title"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>